fixes z-index issues with map controls and menus

--- a/src/css/worldmap-panel.css
+++ b/src/css/worldmap-panel.css
@@ -23,6 +23,6 @@
   opacity: 0.7;
 }
 
-.leaflet-bottom.leaflet-left, .leaflet-bottom.leaflet-right {
-  z-index: 900;
+.leaflet-top.leaflet-left, .leaflet-bottom.leaflet-left, .leaflet-bottom.leaflet-right {
+  z-index: 100;
 }
